video fix on iphone

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -190,11 +190,14 @@ i {
     @include FCata700;
     position: relative;
     text-transform: capitalize;
-
-    &:hover {
-        background-color: $btn-secondary;
-        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-        transform: translateY(-5px);
+}
+@media (min-width: 600px) {
+    .main-button {
+        &:hover {
+            background-color: $btn-secondary;
+            box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+            transform: translateY(-5px);
+        }
     }
 }
 
