--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,9 @@
 @import 'fonts';
 @import 'global';
 
-body {
+.vid {
+    width: 100%;
+    height: 100vh;
 }
 
 .header {
